--- a/score_calculator/pubspec.yaml
+++ b/score_calculator/pubspec.yaml
@@ -19,7 +19,8 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   go_router: ^14.8.1
-
+  easy_rich_text: ^2.2.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
