--- a/score_calculator/pubspec.yaml
+++ b/score_calculator/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   go_router: ^14.8.1
   easy_rich_text: ^2.2.0
   google_fonts: ^6.2.1
+  currency_text_input_formatter: ^2.2.9
 
 dev_dependencies:
   flutter_test:
